[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algo-refactor-env"
version = "1.0.0"
description = "A real-world OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi", "uvicorn", "pydantic", "openenv-core", "openai", "requests"
]

[project.scripts]
server = "server.app:main"
